# pysdlimdraw

./: README.md  pyproject.toml
examples/: test.py  test2.py  test3.py
sdlimdraw/: __init__.py  imdraw.py  imfile.py  sdlext.py
